vendor/zerocopy/tests/ui-nightly/transmute-ref-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:21:34
   |
21 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  unsatisfied trait bound
   |                                  required by a bound introduced by this call
   |
help: the trait `FromBytes` is not implemented for `Dst`
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:18:1
   |
18 | struct Dst(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `Dst`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `AssertDstIsFromBytes`
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:21:34
   |
21 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
